gnstlib_fortran/gnstlib.h

void gnstlib_rgamma_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
/* Exponential, logarithmic and trigonometric integrals */
/******************************************************************************/

/* main functions */

// compute exponential integral ei(x)
double gnstlib_ei(const double x, int& err_id);
// compute exponential integral e1(x)
double gnstlib_e1(const double x, int& err_id);
// compute logarithmic integral li(x)
double gnstlib_li(const double x, int& err_id);
// compute cosine integral si(x)
double gnstlib_ci(const double x, int& err_id);
// compute sine integral si(x)
double gnstlib_si(const double x, int& err_id);
// compute hyperbolic cosine integral chi(x)
double gnstlib_chi(const double x, int& err_id);
// compute hyperbolic sine integral shi(x)
double gnstlib_shi(const double x, int& err_id);
// compute ei(z)
std::complex<double> gnstlib_cei(const std::complex<double> z, int& err_id);
// compute e1(z)
std::complex<double> gnstlib_ce1(const std::complex<double> z, int& err_id);
// compute li(z)
std::complex<double> gnstlib_cli(const std::complex<double> z, int& err_id);
// compute ci(z)
std::complex<double> gnstlib_cci(const std::complex<double> z, int& err_id);
// compute si(z)
std::complex<double> gnstlib_csi(const std::complex<double> z, int& err_id);
// compute chi(z)
std::complex<double> gnstlib_cchi(const std::complex<double> z, int& err_id);
// compute shi(z)
std::complex<double> gnstlib_cshi(const std::complex<double> z, int& err_id);
/* inverse functions */

// compute inverse of ei(x)
double gnstlib_invei(const double x, int& err_id);
// compute inverse of li(x)
double gnstlib_invli(const double x, int& err_id);
/* vectorized versions */

void gnstlib_ei_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_e1_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_li_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_ci_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_si_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_chi_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_shi_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_cei_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_ce1_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cli_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cci_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_csi_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cchi_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cshi_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
/* Error functions, Dawson's and Fresnel Integrals */
/******************************************************************************/

/* main functions */

// compute erf(x)
double gnstlib_erf(const double x, int& err_id);
// compute erfc(x)
double gnstlib_erfc(const double x, int& err_id);
// compute erfcx(x)
double gnstlib_erfcx(const double x, int& err_id);
// compute erfi(x)
double gnstlib_erfi(const double x, int& err_id);
// compute dawson(x)
double gnstlib_dawson(const double x, int& err_id);
// compute fresnel C(x)
double gnstlib_fresnelc(const double x, int& err_id);
// compute fresnel S(x)
double gnstlib_fresnels(const double x, int& err_id);
// compute Voigt's profile
double gnstlib_voigt_profile(const double x, const double sigma, 
      const double gamma, int& err_id);