gnstlib_fortran/gnstlib_cdef.f90


    subroutine gnstlib_rgamma_vec_c(n, v, r, option) bind(C, name="gnstlib_rgamma_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_rgamma_vec_c

    function gnstlib_ei_c(x, err_id) bind(C, name="gnstlib_ei")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_ei_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_ei_c

    function gnstlib_e1_c(x, err_id) bind(C, name="gnstlib_e1")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_e1_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_e1_c

    function gnstlib_li_c(x, err_id) bind(C, name="gnstlib_li")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_li_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_li_c

    function gnstlib_ci_c(x, err_id) bind(C, name="gnstlib_ci")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_ci_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_ci_c

    function gnstlib_si_c(x, err_id) bind(C, name="gnstlib_si")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_si_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_si_c

    function gnstlib_chi_c(x, err_id) bind(C, name="gnstlib_chi")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_chi_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_chi_c

    function gnstlib_shi_c(x, err_id) bind(C, name="gnstlib_shi")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_shi_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_shi_c

    function gnstlib_cei_c(z, err_id) bind(C, name="gnstlib_cei")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cei_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cei_c

    function gnstlib_ce1_c(z, err_id) bind(C, name="gnstlib_ce1")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ce1_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_ce1_c

    function gnstlib_cli_c(z, err_id) bind(C, name="gnstlib_cli")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cli_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cli_c

    function gnstlib_cci_c(z, err_id) bind(C, name="gnstlib_cci")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cci_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cci_c

    function gnstlib_csi_c(z, err_id) bind(C, name="gnstlib_csi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csi_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_csi_c

    function gnstlib_cchi_c(z, err_id) bind(C, name="gnstlib_cchi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cchi_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cchi_c

    function gnstlib_cshi_c(z, err_id) bind(C, name="gnstlib_cshi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cshi_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cshi_c

    function gnstlib_invei_c(x, err_id) bind(C, name="gnstlib_invei")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_invei_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_invei_c

    function gnstlib_invli_c(x, err_id) bind(C, name="gnstlib_invli")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_invli_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_invli_c

    function gnstlib_erf_c(x, err_id) bind(C, name="gnstlib_erf")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_erf_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_erf_c

    subroutine gnstlib_ei_vec_c(n, v, r, option) bind(C, name="gnstlib_ei_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_ei_vec_c

    subroutine gnstlib_e1_vec_c(n, v, r, option) bind(C, name="gnstlib_e1_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_e1_vec_c

    subroutine gnstlib_li_vec_c(n, v, r, option) bind(C, name="gnstlib_li_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_li_vec_c

    subroutine gnstlib_ci_vec_c(n, v, r, option) bind(C, name="gnstlib_ci_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_ci_vec_c

    subroutine gnstlib_si_vec_c(n, v, r, option) bind(C, name="gnstlib_si_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_si_vec_c

    subroutine gnstlib_chi_vec_c(n, v, r, option) bind(C, name="gnstlib_chi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_chi_vec_c

    subroutine gnstlib_shi_vec_c(n, v, r, option) bind(C, name="gnstlib_shi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_shi_vec_c

    subroutine gnstlib_cei_vec_c(n, v, r, option) bind(C, name="gnstlib_cei_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cei_vec_c

    subroutine gnstlib_ce1_vec_c(n, v, r, option) bind(C, name="gnstlib_ce1_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_ce1_vec_c

    subroutine gnstlib_cli_vec_c(n, v, r, option) bind(C, name="gnstlib_cli_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cli_vec_c

    subroutine gnstlib_cci_vec_c(n, v, r, option) bind(C, name="gnstlib_cci_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cci_vec_c

    subroutine gnstlib_csi_vec_c(n, v, r, option) bind(C, name="gnstlib_csi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_csi_vec_c

    subroutine gnstlib_cchi_vec_c(n, v, r, option) bind(C, name="gnstlib_cchi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cchi_vec_c

    subroutine gnstlib_cshi_vec_c(n, v, r, option) bind(C, name="gnstlib_cshi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cshi_vec_c

    function gnstlib_erfc_c(x, err_id) bind(C, name="gnstlib_erfc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_erfc_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_erfc_c

    function gnstlib_erfcx_c(x, err_id) bind(C, name="gnstlib_erfcx")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_erfcx_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_erfcx_c

    function gnstlib_erfi_c(x, err_id) bind(C, name="gnstlib_erfi")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_erfi_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_erfi_c

    function gnstlib_dawson_c(x, err_id) bind(C, name="gnstlib_dawson")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_dawson_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_dawson_c

    function gnstlib_fresnelc_c(x, err_id) bind(C, name="gnstlib_fresnelc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_fresnelc_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_fresnelc_c

    function gnstlib_fresnels_c(x, err_id) bind(C, name="gnstlib_fresnels")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_fresnels_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_fresnels_c

    function gnstlib_voigt_profile_c(x, sigma, gamma, err_id) bind(C, name="gnstlib_voigt_profile")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_voigt_profile_c
        real(c_double), intent(in), value :: x, sigma, gamma
        integer(c_int), intent(out) :: err_id
    end function gnstlib_voigt_profile_c
